# SurveyGen

./: .gitignore  LICENSE  README.md  naming_scheme.md  pyproject.toml  requirements.txt  setup.py  todo.txt
docs/: api-reference.md  api_reference.md  conf.py  index.md  index.rst  installation.md  quickstart.ipynb  quickstart.md  requirements.txt
docs/guides/: index.md  tutorial1.ipynb  tutorial1.md
gui/: pyproject.toml  test.csv
gui/src/: Start_Page.py
gui/src/pages/: 01_Basic_Prompt_Settings.py  01_Option_Prompt.py  01_Prompt_Configuration.py  02_Option_Prompt.py  02_Prompt_Configuration.py  03_Inference_Setting.py  03_Prepare_Prompts.py  04_Final_Overview.py  05_Final_Overview.py
questionnaires/: ANES.csv  ANES_PERSONAS.csv  BFI_3.csv  BFI_3_with_stems.csv  BFI_44.csv  SD3.csv  WVS_ethic.csv
src/qstn/: __init__.py  llm_questionnaire.py  prompt_builder.py  survey_manager.py  survey_prompting.ipynb
src/qstn/inference/: remote_inference.py  response_generation.py  survey_inference.py
src/qstn/parser/: llm_answer_parser.py
src/qstn/utilities/: constants.py  prompt_perturbations.py  survey_objects.py  utils.py
src/survey_gen/: survey_manager.py  survey_prompting.ipynb
src/survey_gen/inference/: survey_inference.py
src/survey_gen/parser/: llm_answer_parser.py
src/survey_gen/utilities/: constants.py  prompt_creation.py  utils.py
src/survey_gen/utilities/survey_classes/: survey_objects.py
src/surveygen/: llm_interview.py  survey_manager.py
src/surveygen/inference/: answer_production.py  dynamic_pydantic.py  response_generation.py  survey_inference.py
src/surveygen/parser/: llm_answer_parser.py
src/surveygen/utilities/: constants.py  prompt_creation.py  prompt_templates.py  survey_objects.py  utils.py
survey_gen/: survey_prompting.ipynb
survey_gen/parser/: llm_answer_parser.py
survey_manager/: survey_manager.py  survey_prompting.ipynb
survey_manager/inference/: basicLLama.py  dynamic_pydantic.py  survey_inference.py
survey_manager/parser/: llm_answer_parser.py
survey_manager/utilities/survey_classes/: survey_objects.py
surveys/: ANES.csv  BFI_3.csv  BFI_3_with_stems.csv  BFI_44.csv  SD3.csv  WVS_ethic.csv
