[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qstn"
version = "0.1.0"
description = "Questionnaire and Survey Evaluation Toolkit for NLP Research"
authors = [
    { name = "Maximilian Kreutner", email = "maximilian.kreutner@uni-mannheim.de" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "vllm>=0.9.0",
    "json_repair"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
flash = [
    "flashinfer-python>=0.2.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/dess-mannheim/QSTN"
Documentation = "https://qstn.readthedocs.io/en/latest/index.html"