[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qstn"
version = "0.1.3"
description = " A Modular Framework for Robust Questionnaire Inference with Large Language Models"
authors = [
    { name = "Maximilian Kreutner", email = "maximilian.kreutner@uni-mannheim.de" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "openai",
    "json_repair"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
local = ["vllm>=0.12"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/dess-mannheim/QSTN"
Documentation = "https://qstn.readthedocs.io/en/latest/index.html"